--- a/index.html
+++ b/index.html
@@ -12,8 +12,36 @@
 </head>
 <body>
     
+    <nav class="navbar navbar-expand-lg bg-light">
 
-<h1>hola mundo</h1>
+        <div class="container-fluid">
+
+          <a class="navbar-brand" href="#"><img src="" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Artistas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Playlist</a>
+                </li>
+                </ul>
+          </div>
+
+        </div>
+
+    </nav>
+
 
 
 
