--- a/index.html
+++ b/index.html
@@ -11,36 +11,44 @@
     <title>Maquetando con Bootstrap | Juan Vidal</title>
 </head>
 <body>
-    
-    <nav class="navbar navbar-expand-lg bg-light">
 
-        <div class="container-fluid">
+    <!-- INICIO DE HEADER -->
 
-          <a class="navbar-brand" href="#"><img src="" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <header id="header">
+        <nav class="navbar navbar-expand-lg bg-ligth" style="background-color:#000">
 
-          <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Artistas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Playlist</a>
-                </li>
-                </ul>
-          </div>
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img class="logo-navbar" src="./multimedia/coder-logo.png" alt="Es la imagen del logo de la empresa"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
 
-    </nav>
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Artistas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Playlist</a>
+                    </li>
+                    </ul>
+
+            </div>
+
+            </div>
+
+        </nav>
+
+    </header>
+
+    <!-- FIN HEADER -->
 
 
 
