--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
                         <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Nosotros</a>
+                            <a class="nav-link" aria-current="page" href="#somos">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="#servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Artistas</a>
+                            <a class="nav-link" href="#artistas">Artistas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         </ul>
 
@@ -194,7 +194,7 @@
                     <div class="mb-3">
                       
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresá tu Correo Electronico">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                      <div id="emailHelp" class="form-text">Nunca le daremos tus datos a alguien más.</div>
 
                     </div>
                     <button type="submit" class="btn btn-primary px-5">Enviar</button>
@@ -217,10 +217,10 @@
 
                 <nav class="col-lg-4 col-md-12 col-sm-12 text-center mb-5">
                     <ul class="nav-footer">
-                        <li><a class="item-footer" href="#">Nosotros</a></li>
-                        <li><a class="item-footer" href="#">Servicios</a></li>
-                        <li><a class="item-footer" href="#">Artistas</a></li>
-                        <li><a class="item-footer" href="#">Contacto</a></li>
+                        <li><a class="item-footer" href="#somos">Nosotros</a></li>
+                        <li><a class="item-footer" href="#servicios">Servicios</a></li>
+                        <li><a class="item-footer" href="#artistas">Artistas</a></li>
+                        <li><a class="item-footer" href="./contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
 
